--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>cloud-provider-payment8001</module>
+        <module>cloud-consumer-order80</module>
     </modules>
 
     <!-- 统一管理jar包版本 -->
@@ -29,23 +30,29 @@
     <!-- dependencyManagement一般用于父工程 子模块继承之后,提供作用: 锁定版本 + 子module不用写groupId和version -->
     <dependencyManagement>
         <dependencies>
-            <!-- springboot 2.2.2 -->
+            <!-- spring boot 2.2.2 -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>2.2.2.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
-            <!-- springcloud Hoxton.SR1 -->
+            <!-- spring cloud Hoxton.SR1 -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>Hoxton.SR1</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
-            <!-- springcloud alibaba 2.1.0.RELEASE -->
+            <!-- spring cloud alibaba 2.1.0.RELEASE -->
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                 <version>2.1.0.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
             <dependency>
