--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -8,9 +8,9 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource # 当前数据源操作类型
     driver-class-name: org.gjt.mm.mysql.Driver   # mysql驱动包
     # mysql5.7以后 进行了安全加固 如果不加useSSL=false会报一个ssl安全加固的异常
-    url: jdbc:mysql://localhost:3306/db2019?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/db2020?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
-    password: 123456
+    password: root
 
 mybatis: # mybatis的知识点还是要回顾一下的 背下来
   mapperLocations: classpath:mapper/*.xml # resource目录下mapper目录下的*.xml文件
