--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -25,3 +25,6 @@ eureka:
     service-url:
       # defaultZone: http://localhost:7001/eureka
       defaultZone: http://localhost:7001/eureka,http://localhost:7002/eureka # 集群版
+  instance:
+    instance-id: payment8002
+    prefer-ip-address: true # 访问信息有IP信息提示
