--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -11,5 +11,5 @@ eureka:
     fetch-registry: false
     service-url:
       # 设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址
-      # defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-      defaultZone: http://localhost:7002/eureka/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/ # 单机
+      # defaultZone: http://localhost:7002/eureka/ # 集群
