--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -23,8 +23,8 @@ eureka:
     # 是否从EurekaServer抓取已有的注册信息, 默认为true. 单节点无所谓, 集群必须设置为true才能配合Ribbon使用负载均衡
     fetch-registry: true
     service-url:
-      # defaultZone: http://localhost:7001/eureka
-      defaultZone: http://localhost:7001/eureka,http://localhost:7002/eureka # 集群版
+      defaultZone: http://localhost:7001/eureka
+      # defaultZone: http://localhost:7001/eureka,http://localhost:7002/eureka # 集群版
   instance:
     instance-id: payment8001
     prefer-ip-address: true # 访问信息有IP信息提示
